# n5-project

./: .env.sample  Dockerfile  PROBLEM-STATEMENT.md  PROPOSAL.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
n5project/: asgi.py  settings.py  urls.py  wsgi.py
n5project/apps/api/: apps.py  urls.py
n5project/apps/api/auth/: permissions.py  urls.py
n5project/apps/api/documents/: serializers.py  urls.py  views.py
n5project/apps/core/: admin.py  apps.py  models.py  permissions.py
n5project/apps/core/migrations/: 0001_initial.py
n5project/apps/documents/: admin.py  apps.py  models.py
n5project/apps/documents/migrations/: 0001_initial.py
n5project/apps/utils/: apps.py  auth_backends.py  models.py  permissions.py
utility/: uwsgi.ini
